--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_gravity="center_horizontal"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     tools:context=".Activity.MainActivity"
     android:background="@drawable/bg">
 
@@ -26,6 +26,7 @@
         android:text="WITAM W MOJEJ KUCHNI"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,6 +38,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         android:onClick="onShowDetail"
         android:text="@string/detail_button"/>
