--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,37 +13,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_gravity="center_horizontal"
+    android:background="@drawable/bg"
     android:orientation="vertical"
-    tools:context=".Activity.MainActivity"
-    android:background="@drawable/bg">
-
+    tools:context=".Activity.MainActivity">
 
     <TextView
+        android:layout_marginTop="70dp"
+        android:layout_gravity="center"
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="WITAM W MOJEJ KUCHNI"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.168" />
-    <Button
-        android:id="@+id/Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:onClick="onShowDetail"
-        android:text="@string/detail_button"/>
 
     <ListView
+        android:layout_gravity="center"
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -57,6 +47,11 @@
         app:layout_constraintVertical_bias="0.0"
         android:divider="@android:color/transparent"
         android:dividerHeight="10.0sp"/>
-
+    <Button
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onShowDetail"
+        android:text="@string/detail_button"/>
 </LinearLayout>
 <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
