--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,25 +33,25 @@
         app:layout_constraintVertical_bias="0.168" />
 
     <ListView
-        android:layout_gravity="center"
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginTop="72dp"
 
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10.0sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView"
-        app:layout_constraintVertical_bias="0.0"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="10.0sp"/>
-    <Button
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="onShowDetail"
-        android:text="@string/detail_button"/>
+        app:layout_constraintVertical_bias="0.0" />
+<!--    <Button-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:onClick="onShowDetail"-->
+<!--        android:text="@string/detail_button"/>-->
 </LinearLayout>
 <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
